--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Survey project</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
+<body>
 <h1 id="title">Girls-Can-Code Survey Form</h1>
 <p id="description"> If you want to join our club fill in the details below</p>
 <form id="survey-form">
@@ -85,7 +86,9 @@
 </div>
 	</fieldset>
 </form>
-<body>
 
+</figure>
+</main>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
