--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+By<!DOCTYPE html>
 <html>
 <head>
 	<title>Survey project</title>
@@ -82,7 +82,7 @@
 	<textarea id="comments" class="textarea" name="comment" placeholder="Enter your comment here"></textarea>
 </div>
 <div>
-	<button type="Submit" id="Submit" class="btn">Submit</button>
+	<button type="Submit" id="submit" class="btn">Submit</button>
 </div>
 	</fieldset>
 </form>
