--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ By<!DOCTYPE html>
 	<textarea id="comments" class="textarea" name="comment" placeholder="Enter your comment here"></textarea>
 </div>
 <div>
-	<button type="Submit" id="submit" class="btn">Submit</button>
+	<button type="submit" id="submit" class="btn">Submit</button>
 </div>
 	</fieldset>
 </form>
