--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
-By<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<title>Survey project</title>
 	<link rel="stylesheet" type="text/css" href="index.css">
+        <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
 <h1 id="title">Girls-Can-Code Survey Form</h1>
@@ -22,7 +23,7 @@ By<!DOCTYPE html>
 </div>
 <div>
 	<br>
-		<label id="age-label" for="age">Age</label>
+		<label id="number-label" for="age">Age</label>
 		<input required="" placeholder="Enter your age" type="number" name="age" tabindex="3" id="number" class="form-control" min="16" max="100">
 </div>
 <div>
